fix: z-index

--- a/src/components/Filters/SortDropdown/SortDropdown.module.scss
+++ b/src/components/Filters/SortDropdown/SortDropdown.module.scss
@@ -9,7 +9,7 @@
   text-overflow: ellipsis;
   -webkit-line-clamp: 1;
   min-width: 20vw;
-  z-index: 99;
+  z-index: 1;
   button {
   }
 }
@@ -17,7 +17,6 @@
 .drop_container {
   position: absolute;
   top: 36px;
-  z-index: 10;
   opacity: 0;
   pointer-events: none;
   display: inline-block;
@@ -26,6 +25,7 @@
   background-color: #1f1b2e;
   box-shadow: 0 20px 40px rgba(7, 5, 14, 0.4);
   overflow: hidden;
+  z-index: 15;
   @media screen and (max-width: $mobile) {
     right: 0;
   }
